2012-04-02  Bastien Guerry  <bzg@gnu.org>

	* org-clock.el (org-clock-out-if-current): Fix regression: rename
	`org-clock-state' to `org-state' to match the name of the
	dynamically-scoped variable in `org-todo'.

	* org-agenda.el (entry, org-diary, org-class): Fix regression:
	rename `org-entry' to `entry'.

2012-04-01  Bastien Guerry  <bzg@gnu.org>

	* org.el (org-todo): Fix regression in `org-todo'.

2012-04-01  Eric Schulte  <eric.schulte@gmx.com>

	* ob-C.el (org-babel-C-execute): Add .exe to the end of compiled
	C files on windows.

2012-04-01  Eric Schulte  <eric.schulte@gmx.com>

	* ob-exp.el (org-babel-exp-code): Escape all lines when exporting
	Org-mode blocks.

	* ob.el (org-babel-parse-src-block-match): Make use of the new
	language argument to org-babel-strip-protective-commas.
	(org-babel-parse-inline-src-block-match): Make use of the new
	language argument to org-babel-strip-protective-commas.
	(org-babel-strip-protective-commas): Now accepts a language
	argument.

2012-04-01  Bastien Guerry  <bzg@gnu.org>

	* org.el (org-fast-tag-selection): Fix an bug when listing tags
	for completion.

2012-04-01  Ilya Shlyakhter  <ilya_shl@alum.mit.edu>  (tiny change)

	* org.el (org-delete-property-globally): Fixed a bug that left
	blank line in place of the property, instead of removing the line.

2012-04-01  Bastien Guerry  <bzg@gnu.org>

	* ob-maxima.el (org-babel-maxima-command): Add group information
	to the defcustom.

2012-04-01  Bastien Guerry  <bzg@gnu.org>

	* org.el (org-mode): Use `buffer-face-mode' to remap the 'default
	face to 'org-default.

2012-04-01  Bastien Guerry  <bzg@gnu.org>

	* org-ascii.el (org-export-as-ascii): Fix escaping of underscores
	in links.

2012-04-01  Bastien Guerry  <bzg@gnu.org>

	* org.el: Prevent a bug while defining the menu by requiring
	`org-beamer' when necessary.

2012-04-01  Bastien Guerry  <bzg@gnu.org>

	* org-table.el (orgtbl-self-insert-command): Use